added modified Signup, Login, Import wallet, Forgot Password Functionality.

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -133,6 +133,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:padding="15dp"
+        android:maxLength="4"
         android:textColorHint="@color/grey"
         android:textColor="@color/white"
         android:inputType="number"
@@ -163,7 +164,7 @@
         android:id="@+id/tv_pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/pass"
+        android:text="@string/new_password"
         android:textSize="15sp"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"
@@ -199,40 +200,26 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_pass"
         tools:ignore="MissingConstraints">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/img_show_pass"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:background="@drawable/show_icon"-->
-<!--            android:tint="@color/white"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:layout_marginEnd="20dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            tools:ignore="UseAppTint" />-->
-
-        <TextView
-            android:id="@+id/tv_show_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/show"
-            android:textSize="15sp"
+        <ImageView
+            android:id="@+id/img_show_hide_pass"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/grey"
+            android:background="@drawable/icon_show"
+            android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="UseAppTint" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@null"
-            android:layout_toStartOf="@+id/tv_show_pass"
-            android:hint="@string/enter_password"
+            android:layout_toStartOf="@+id/img_show_hide_pass"
+            android:hint="@string/enter_new_password"
             android:inputType="textPassword"
             android:padding="15dp"
             android:maxLines="1"
@@ -270,26 +257,25 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_confirm_pass"
         tools:ignore="MissingConstraints">
 
-        <TextView
-            android:id="@+id/tv_show_confirm_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/show"
-            android:textSize="15sp"
+        <ImageView
+            android:id="@+id/img_show_hide_confirm_pass"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:textColor="@color/grey"
+            android:background="@drawable/icon_show"
+            android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="UseAppTint" />
 
         <EditText
             android:id="@+id/et_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@null"
-            android:layout_toStartOf="@+id/tv_show_confirm_pass"
+            android:layout_toStartOf="@+id/img_show_hide_confirm_pass"
             android:hint="@string/enter_confirm_password"
             android:inputType="textPassword"
             android:padding="15dp"
