--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
+    tools:openDrawer="end">
+
 <androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -201,47 +211,74 @@
                 android:src="@drawable/cifdaq_white"/>
 
             <TextView
-                android:id="@+id/txt_coin_amount"
+                android:id="@+id/txt_unlock_balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gilroy_medium"
                 android:layout_marginStart="20dp"
-                android:text="15365.32 CIFD"
-                android:textColor="@color/white"
-                android:textSize="25sp"
+                android:layout_marginTop="5dp"
+                android:text="Unlock Balance"
+                android:textColor="@color/grey"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@+id/img_coin"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txt_unlocked_amount"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/txt_unlocked_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/gilroy_medium"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:text="0.0002223 CIFD"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt_unlock_balance"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/balance_amount"
+                android:id="@+id/usd_balance_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gilroy_medium"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:text="$ 27354 USD"
+                android:layout_marginTop="5dp"
+                android:text="$ 0.0018 USD"
                 android:textColor="@color/grey"
                 android:textSize="13sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt_coin_amount"
+                app:layout_constraintTop_toBottomOf="@+id/txt_unlocked_amount"
                 android:textStyle="normal" />
 
-            <TextView
-                android:id="@+id/changes_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/gilroy_medium"
+            <ImageView
+                android:id="@+id/img_refresh"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:padding="5dp"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="+3.22%"
-                android:textColor="@color/base_primary"
-                android:textSize="11sp"
-                app:layout_constraintStart_toEndOf="@+id/balance_amount"
-                app:layout_constraintTop_toBottomOf="@+id/txt_coin_amount"
-                app:layout_constraintBottom_toBottomOf="@+id/balance_amount"
-                android:textStyle="normal" />
+                android:background="@drawable/icon_refresh"
+                app:layout_constraintStart_toEndOf="@+id/usd_balance_amount"
+                app:layout_constraintTop_toBottomOf="@+id/txt_unlocked_amount"
+                app:layout_constraintBottom_toBottomOf="@+id/usd_balance_amount"
+                android:textStyle="normal"/>
+
+<!--            <TextView-->
+<!--                android:id="@+id/changes_amount"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:fontFamily="@font/gilroy_medium"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:text="+3.22%"-->
+<!--                android:textColor="@color/base_primary"-->
+<!--                android:textSize="11sp"-->
+<!--                app:layout_constraintStart_toEndOf="@+id/usd_balance_amount"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/txt_unlocked_amount"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/usd_balance_amount"-->
+<!--                android:textStyle="normal" />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -448,14 +485,12 @@
         android:id="@+id/vesting_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="10dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="15dp"
-        android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/card_color"
-        app:cardMaxElevation="12dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
-        app:layout_constraintTop_toBottomOf="@+id/send_view"
+        app:layout_constraintTop_toBottomOf="@+id/title_vesting_cifd"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -538,9 +573,9 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/gilroy_medium"
                         android:layout_marginBottom="5dp"
-                        android:text="Balance"
+                        android:text="Locked Balance"
                         android:textColor="@color/grey"
-                        android:textSize="12sp"
+                        android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toTopOf="@+id/vested_balance_amount"
                         android:textStyle="normal" />
@@ -551,7 +586,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/gilroy_medium"
                         android:layout_marginBottom="5dp"
-                        android:text="23322 CIFD"
+                        android:text="1.96 CIFD"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -560,40 +595,81 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/vested_changes_amount"
+                        android:id="@+id/vested_usd_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/gilroy_medium"
-                        android:text="$3454 USD"
+                        android:layout_marginTop="5dp"
+                        android:text="$ 1.568 USD"
                         android:textColor="@color/grey"
                         android:textSize="12sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/vested_balance_amount"
                         android:textStyle="normal" />
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/button_send"
-                        android:layout_width="80dp"
-                        android:layout_height="35dp"
-                        android:layout_marginStart="20dp"
-                        app:cornerRadius="0dp"
-                        android:gravity="center"
-                        android:background="@drawable/bg_border"
-                        android:paddingHorizontal="20dp"
-                        android:text="@string/send"
+<!--                    <com.google.android.material.button.MaterialButton-->
+<!--                        android:id="@+id/button_send"-->
+<!--                        android:layout_width="80dp"-->
+<!--                        android:layout_height="35dp"-->
+<!--                        android:layout_marginStart="20dp"-->
+<!--                        app:cornerRadius="0dp"-->
+<!--                        android:gravity="center"-->
+<!--                        android:background="@drawable/bg_border"-->
+<!--                        android:paddingHorizontal="20dp"-->
+<!--                        android:text="@string/send"-->
+<!--                        android:textColor="@color/white"-->
+<!--                        android:textSize="12sp"-->
+<!--                        android:textStyle="normal"-->
+<!--                        app:layout_constraintTop_toTopOf="parent"-->
+<!--                        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                        app:layout_constraintEnd_toEndOf="parent"-->
+<!--                        tools:ignore="HardcodedText" />-->
+
+                    <TextView
+                        android:id="@+id/txt_total_balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/gilroy_medium"
+                        android:layout_marginBottom="5dp"
+                        android:text="Total Balance"
+                        android:textColor="@color/grey"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toTopOf="@+id/total_balance_amount"
+                        android:textStyle="normal" />
+
+                    <TextView
+                        android:id="@+id/total_balance_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/gilroy_medium"
+                        android:layout_marginBottom="5dp"
+                        android:text="2 CIFD"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
-                        android:textStyle="normal"
+                        android:textSize="18sp"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/total_usd_amount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/gilroy_medium"
+                        android:layout_marginTop="5dp"
+                        android:text="$ 1.6 USD"
+                        android:textColor="@color/grey"
+                        android:textSize="12sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        tools:ignore="HardcodedText" />
+                        app:layout_constraintTop_toBottomOf="@+id/total_balance_amount"
+                        android:textStyle="normal" />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.2dp"
                         android:background="@color/grey"
-                        app:layout_constraintTop_toBottomOf="@+id/vested_changes_amount"
+                        app:layout_constraintTop_toBottomOf="@+id/vested_usd_amount"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"/>
@@ -619,6 +695,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@+id/vesting_view"
         tools:context=".activity.HomeScreenActivity"
         tools:ignore="ExtraText">
@@ -650,3 +727,49 @@
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:fitsSystemWindows="false"
+        app:headerLayout="@layout/header_navigation"
+        app:menu="@menu/navigation_menu"
+        android:background="@color/card_color"
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="20dp"
+            android:clickable="false"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/footer_nav_app_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="MPC Wallet"
+                android:textSize="13sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/gilroy_medium"/>
+
+            <TextView
+                android:id="@+id/footer_nav_app_version"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="V 1.10"
+                android:layout_marginTop="5dp"
+                android:textSize="11sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/gilroy_medium"/>
+
+        </LinearLayout>
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
