--- a/app/src/main/res/layout/activity_otpverification.xml
+++ b/app/src/main/res/layout/activity_otpverification.xml
@@ -132,6 +132,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
         android:padding="15dp"
+        android:maxLength="4"
         android:textColorHint="@color/grey"
         android:textColor="@color/white"
         android:inputType="number"
