--- a/app/src/main/res/layout/item_phrase.xml
+++ b/app/src/main/res/layout/item_phrase.xml
@@ -34,8 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@null"
-            android:layout_toRightOf="@+id/tv_phrase_number"
+            android:layout_toEndOf="@+id/tv_phrase_number"
             android:inputType="text"
+            android:digits = "abcdefghijklmnopqrstuvwxyz "
             android:layout_centerInParent="true"
             android:padding="10dp"
             android:textColorHint="@color/grey"
