Implemented generic alert, Network checking, validation over send transaction, success, failure dialog etc.

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -27,12 +27,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/otp_verification"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/tv_email"
         tools:ignore="MissingConstraints" />
@@ -97,7 +97,7 @@
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_toLeftOf="@+id/tv_send_otp"
+            android:layout_toStartOf="@+id/tv_send_otp"
             android:background="@null"
             android:editable="false"
             android:inputType="none"
@@ -181,7 +181,7 @@
         android:padding="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/info_icon_white"
+        android:background="@drawable/info_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_otp_timer"
         app:layout_constraintBottom_toTopOf="@+id/rl_password_box"
@@ -206,7 +206,7 @@
             android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/icon_show"
+            android:background="@drawable/icon_hide"
             android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -263,7 +263,7 @@
             android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/icon_show"
+            android:background="@drawable/icon_hide"
             android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -301,7 +301,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/verify"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
