--- a/app/src/main/res/layout/fragment_full_screen_send_transaction.xml
+++ b/app/src/main/res/layout/fragment_full_screen_send_transaction.xml
@@ -41,12 +41,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/send_transaction"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/descReceived"
@@ -60,7 +60,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/gilroy_medium"
         android:text="@string/send_transaction_desc"
-        android:gravity="center"
+        android:gravity="start"
         android:textColor="@color/grey"
         android:textSize="12sp"
         android:textStyle="normal"
@@ -151,6 +151,7 @@
         android:layout_height="wrap_content"
         android:text="@string/amount"
         android:textSize="15sp"
+        android:maxLength="16"
         android:textColor="@color/white"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -170,7 +171,7 @@
         android:padding="15dp"
         android:textColorHint="@color/grey"
         android:textColor="@color/white"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         android:background="@drawable/bg_border_grey"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -261,7 +262,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/send"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintTop_toBottomOf="@+id/et_gas"
