--- a/app/src/main/res/layout/activity_congratulation.xml
+++ b/app/src/main/res/layout/activity_congratulation.xml
@@ -25,12 +25,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/congratulation_title"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/gilroy_medium"
-        android:gravity="center"
+        android:gravity="start"
         android:text="@string/congratulation_desc"
         android:textColor="@color/grey"
         android:textSize="12sp"
@@ -68,7 +68,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/login"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
