--- a/app/src/main/res/layout/activity_create_wallet.xml
+++ b/app/src/main/res/layout/activity_create_wallet.xml
@@ -50,12 +50,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/create_your_wallet"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/tv_email"
         tools:ignore="MissingConstraints" />
@@ -143,7 +143,7 @@
         android:padding="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/info_icon_white"
+        android:background="@drawable/info_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_email"
         app:layout_constraintBottom_toTopOf="@+id/rl_password_box"
@@ -168,7 +168,7 @@
             android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/icon_show"
+            android:background="@drawable/icon_hide"
             android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -225,7 +225,7 @@
             android:layout_height="25dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/icon_show"
+            android:background="@drawable/icon_hide"
             android:contentDescription="@string/show"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -345,7 +345,7 @@
         android:padding="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/info_icon_white"
+        android:background="@drawable/info_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rl_mobile_box"
         app:layout_constraintBottom_toTopOf="@+id/rl_unique_id_box"
@@ -370,7 +370,7 @@
             android:layout_height="50dp"
             android:background="@null"
             android:hint="@string/enter_unique_id"
-            android:inputType="text"
+            android:digits = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
             android:padding="15dp"
             android:maxLines="1"
             android:textColor="@color/white"
@@ -394,7 +394,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/next"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintTop_toBottomOf="@+id/rl_unique_id_box"
