--- a/app/src/main/res/layout/activity_onboard.xml
+++ b/app/src/main/res/layout/activity_onboard.xml
@@ -25,8 +25,8 @@
         android:layout_marginEnd="20dp"
         android:text="@string/skip"
         android:textAllCaps="true"
-        android:fontFamily="@font/downey_demo"
-        android:textColor="@color/grey"
+        android:fontFamily="@font/poppins_regular"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,15 +60,14 @@
         android:layout_height="50dp"
         android:layout_margin="20dp"
         app:cornerRadius="0dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center"
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/next"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textAllCaps="true"
         android:textSize="14sp"
         android:textStyle="normal"
-        android:drawableEnd="@drawable/ic_right"
         app:layout_constraintTop_toBottomOf="@+id/onBoardingViewPager"
         app:layout_constraintBottom_toTopOf="@+id/indicatorContainer"
         app:layout_constraintEnd_toEndOf="parent"
