--- a/app/src/main/res/layout/activity_phase_recovery.xml
+++ b/app/src/main/res/layout/activity_phase_recovery.xml
@@ -40,12 +40,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/secret_recovery"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/descSecretRecovery"
         tools:ignore="MissingConstraints" />
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:fontFamily="@font/gilroy_medium"
-        android:text="@string/secret_recovery_msg"
+        android:text="@string/secret_recovery_desc"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="normal"
@@ -80,9 +80,9 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_copy_to_clip"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="30dp"
-        android:padding="20dp"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/gilroy_medium"
         android:background="@drawable/copy_to_clip"
@@ -109,7 +109,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/next"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
