--- a/app/src/main/res/layout/activity_wallet_setup.xml
+++ b/app/src/main/res/layout/activity_wallet_setup.xml
@@ -7,6 +7,20 @@
     android:background="@color/black"
     tools:context=".activity.WalletSetupActivity">
 
+    <ImageView
+        android:id="@+id/img_arrow_back"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="center"
+        android:padding="2dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/arrow_back"
+        android:tint="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UseAppTint" />
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_app"
         android:layout_width="50dp"
@@ -23,11 +37,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/wallet_setup"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,13 +52,15 @@
         android:id="@+id/descWalletSetup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:fontFamily="@font/gilroy_medium"
         android:text="@string/wallet_setup_desc"
         android:textColor="@color/grey"
         android:textSize="12sp"
         android:textStyle="normal"
-        android:gravity="center"
+        android:gravity="start"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/buttonImport"
@@ -82,7 +98,7 @@
         android:backgroundTint="@color/base_primary"
         android:paddingHorizontal="20dp"
         android:text="@string/create_wallet"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="normal"
         app:layout_constraintTop_toBottomOf="@+id/buttonImport"
