--- a/app/src/main/res/layout/info_message_layout.xml
+++ b/app/src/main/res/layout/info_message_layout.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:text="@string/pass_suggestion_msg"
         android:textSize="12sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:fontFamily="@font/gilroy_medium"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
