--- a/app/src/main/res/layout/item_token.xml
+++ b/app/src/main/res/layout/item_token.xml
@@ -11,9 +11,11 @@
         android:id="@+id/img_coin"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_centerVertical="true"
         android:src="@drawable/cifdaq_green"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
         android:id="@+id/coin_name"
@@ -25,33 +27,34 @@
         android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/img_coin"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:textStyle="normal" />
 
-    <TextView
-        android:id="@+id/coin_volume"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/gilroy_medium"
-        android:layout_marginStart="10dp"
-        android:textColor="@color/grey"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/img_coin"
-        app:layout_constraintTop_toBottomOf="@+id/coin_name"
-        android:textStyle="normal"
-        tools:ignore="MissingConstraints" />
+<!--    <TextView-->
+<!--        android:id="@+id/coin_volume"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/gilroy_medium"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:textColor="@color/grey"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/img_coin"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/coin_name"-->
+<!--        android:textStyle="normal"-->
+<!--        tools:ignore="MissingConstraints" />-->
 
-    <TextView
-        android:id="@+id/coin_amount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/gilroy_medium"
-        android:layout_marginStart="10dp"
-        android:text="$3454 USD"
-        android:textColor="@color/grey"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/coin_volume"
-        app:layout_constraintTop_toBottomOf="@+id/coin_name"
-        android:textStyle="normal" />
+<!--    <TextView-->
+<!--        android:id="@+id/coin_amount"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/gilroy_medium"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:text="$3454 USD"-->
+<!--        android:textColor="@color/grey"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/coin_volume"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/coin_name"-->
+<!--        android:textStyle="normal" />-->
 
     <TextView
         android:id="@+id/coin_price"
@@ -65,19 +68,20 @@
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/coin_changes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/gilroy_medium"
-        android:text="$3454 USD"
-        android:textColor="@color/base_primary"
-        android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coin_price"
-        android:textStyle="normal" />
+<!--    <TextView-->
+<!--        android:id="@+id/coin_changes"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/gilroy_medium"-->
+<!--        android:text="$3454 USD"-->
+<!--        android:textColor="@color/base_primary"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/coin_price"-->
+<!--        android:textStyle="normal" />-->
 
     <View
         android:layout_width="match_parent"
