--- a/app/src/main/res/layout/layout_full_screen_qr_code_dialog.xml
+++ b/app/src/main/res/layout/layout_full_screen_qr_code_dialog.xml
@@ -40,12 +40,12 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:text="@string/receive_transaction"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/descReceived"
@@ -59,7 +59,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/gilroy_medium"
         android:text="@string/show_qr_desc"
-        android:gravity="center"
+        android:gravity="start"
         android:textColor="@color/grey"
         android:textSize="12sp"
         android:textStyle="normal"
