--- a/app/src/main/res/layout/onboarding_item_container.xml
+++ b/app/src/main/res/layout/onboarding_item_container.xml
@@ -9,10 +9,9 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageOnboarding"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginTop="32dp"
-        android:padding="20dp"
         android:scaleType="fitCenter"
         android:adjustViewBounds="true" />
 
@@ -24,10 +23,10 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:gravity="start"
-        android:fontFamily="@font/gilroy_medium"
+        android:fontFamily="@font/poppins_regular"
         android:textColor="@color/white"
         android:textSize="30sp"
-        android:textStyle="normal"
+        android:textStyle="bold"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
