--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -56,6 +56,10 @@
         android:icon="@drawable/icon_req_feature"
         android:title="Request a feature"/>
     <item
+        android:id="@+id/nav_delete"
+        android:icon="@drawable/icon_delete"
+        android:title="Delete wallet"/>
+    <item
         android:id="@+id/nav_logout"
         android:icon="@drawable/icon_logout"
         android:title="Log out"/>
