--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,9 @@
     <!--    <color name="purple_700">#FF3700B3</color>-->
     <!--    <color name="teal_200">#FF03DAC5</color>-->
     <!--    <color name="teal_700">#FF018786</color>-->
-    <color name="base_primary">#3cd997</color>
+    <color name="base_primary">#0FA25E</color>
+<!--    <color name="base_primary">#3cd997</color>-->
+
     <color name="grey">#B0B0B0</color>
     <color name="red">#FF0000</color>
     <color name="card_color">#262626</color>
@@ -17,4 +19,5 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="glassy_transparent">#80000000</color>
 </resources>
