--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,4 +45,10 @@
         <item name="android:background">@drawable/rounded_corner_bottomsheet</item>
     </style>
 
+
+    <style name="AnimationForDialog" >
+        <item name="android:windowEnterAnimation">@anim/dialog_zoom_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_zoom_out</item>
+    </style>
+
 </resources>
